examples/errors/hyphenated-stage.dsl
stage build-java as build {
  base chainguard { variant dev distro wolfi image "img" }
}
